--- a/main.html
+++ b/main.html
@@ -11,12 +11,12 @@
 <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" id = "open-modal" data-bs-toggle="modal" data-bs-target="#exampleModal">
   Launch demo modal
-</button>
+</button>.
 
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" id = "accio-modal">
-    <div class="modal-content">
+    <div class="modal-content" id="newton-modal">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">New Modal</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
