--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 </button>.
 
 <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="newton-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" id = "accio-modal">
     <div class="modal-content" id="newton-modal">
       <div class="modal-header">
