--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 
 <body>
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" id = "open-modal" data-bs-toggle="modal" data-bs-target="#exampleModal">
+<button type="button" class="btn btn-primary" id = "open-modal newton-modal" data-bs-toggle="modal" data-bs-target="#exampleModal">
   Launch demo modal
 </button>.
 
