--- a/main.html
+++ b/main.html
@@ -8,31 +8,37 @@
 </head>
 
 <body>
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" id = "open-modal newton-modal" data-bs-toggle="modal" data-bs-target="#exampleModal">
-  Launch demo modal
-</button>.
+
+	<!-- Button trigger modal -->
+<div id="newton-modal">	
+<button type="button" class="btn btn-primary" id="open-modal" data-bs-toggle="modal" data-bs-target="#newton-modal">
+  Launch newton modal
+</button>
 
 <!-- Modal -->
-<div class="modal fade" id="newton-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" id = "accio-modal">
-    <div class="modal-content" id="newton-modal">
+<div id="newton-modal" class="modal"  data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">New Modal</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <h5 class="modal-title" id="staticBackdropLabel">New Modal</h5>
+<!--         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
       </div>
+	 
       <div class="modal-body">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tempor nec nulla nec commodo. Curabitur at justo condimentum, vestibulum enim eget, mollis arcu. Cras varius elementum eleifend. 
-      </div>
+        Lorem ipsum dolor sit amet
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
       </div>
+	  </div>
     </div>
   </div>
 </div>
 
-
+	
+	<!-- the entire body must be written by student -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./script.js">
 </script>
 
