--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 <body>
 
 	<!-- Button trigger modal -->
-<div id="newton-modal">	
+<div id="newton-modal" class="model">	
 <button type="button" class="btn btn-primary" id="open-modal" data-bs-toggle="modal" data-bs-target="#newton-modal">
   Launch newton modal
 </button>
@@ -21,7 +21,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="staticBackdropLabel">New Modal</h5>
-<!--         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
 	 
       <div class="modal-body">
