--- a/main.html
+++ b/main.html
@@ -9,28 +9,26 @@
 
 <body>
 <!-- Button trigger modal -->
-	<div id="newton-modal">
-<button type="button" class="btn btn-primary" id = "open-modal" data-bs-toggle="modal" data-bs-target="#exampleModal">
+<button type="button" class="btn btn-primary" id = "open-modal" data-bs-toggle="modal" data-bs-target="#newton-Modal">
   Launch demo modal
 </button>
 
 <!-- Modal -->
-<div class="modal fade modal" id="newton-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" id = "accio-modal">
+<div class="modal fade modal" id="newton-modal" tabindex="-1" aria-labelledby="newton-modalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">New Modal</h5>
+        <h5 class="modal-title" id="newton-modalLabel">New Modal</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tempor nec nulla nec commodo. Curabitur at justo condimentum, vestibulum enim eget, mollis arcu. Cras varius elementum eleifend. 
+    Lorem ipsum dolor sit amet 
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
-</div>
 </div>
 
 
